dataset1235/2025-2/2947369575/users/2898291405/executions/1003782500_1927446959.log
== SUBMISSION (2025-08-27 18:44:22)
-- CODE: 
 n = float(input())

Valor1 = n * 0.27
Valor2 = n + (n * 0.42)
Valor3 = n - (n * 0.63)

print(round(Valor1,2))
print(round(Valor2,2))
print(round(Valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:47:17)
-- CODE: 
n = float(input())

valor1 = n * 0.27
valor2 = n + (n * 0.42)
valor3 = n - (n * 0.63)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:45:23)
-- CODE: 
 n = float(input())

valor1 = n * 0.27
valor2 = n + (n * 0.42)
valor3 = n - (n * 0.63)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:45:16)
-- CODE: 
 n = float(input())

valor1 = n * 0.27
valor2 = n + (n * 0.42)
valor3 = n - (n * 0.63)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:47:38)
-- CODE: 
n = float(input())

valor1 = n * 0.27
valor2 = n + (n * 0.42)
valor3 = n - (n * 0.63)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
